simplify the ui of the server, pretty up the agent code.

--- a/src/Server/JMW.Agent.Server/ClientApp/src/app/app.component.html
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+  <app-nav-menu *ngIf="showNavMenu"></app-nav-menu>
   <main class="container">
     <router-outlet></router-outlet>
   </main>
