--- a/src/Server/JMW.Agent.Server/ClientApp/src/api-authorization/login-menu/login-menu.component.html
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/api-authorization/login-menu/login-menu.component.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav" *ngIf="isAuthenticated | async">
     <li class="nav-item">
-        <a  class="nav-link text-dark" [routerLink]='["/authentication/profile"]' title="Manage">Hello {{ userName | async }}</a>
+        <span class="nav-link text-dark">Hello {{ userName | async }}</span>
     </li>
     <li class="nav-item">
         <a  class="nav-link text-dark" [routerLink]='["/authentication/logout"]' [state]='{ local: true }' title="Logout">Logout</a>
