--- a/src/Server/JMW.Agent.Server/ClientApp/src/api-authorization/login/login.component.html
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/api-authorization/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-5">
   <div class="col-md-6 offset-md-3">
     <div class="card">
       <div class="card-header">
@@ -53,4 +53,3 @@
     </div>
   </div>
 </div>
-
