--- a/src/Server/JMW.Agent.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">JMW.Agent.Server</a>
+      <a class="navbar-brand" [routerLink]="['/agents']">JMW.Agent.Server</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,13 +20,6 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/agents']"
               >Agents</a
