--- a/src/Server/JMW.Agent.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -22,7 +22,12 @@
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/agents']"
-              >Agents</a
+              >Agent Registration</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/active-agents']"
+              >Active Agents</a
             >
           </li>
         </ul>
