--- a/src/Server/JMW.Agent.Server/ClientApp/src/styles.css
+++ b/src/Server/JMW.Agent.Server/ClientApp/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* Import Bootstrap CSS */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css');
+
+/* Import FontAwesome CSS */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
+
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
